force-app/main/default/objects/Emails_to_Exclude_ChatNow_AutoReply__mdt/Emails_to_Exclude_ChatNow_AutoReply__mdt.object-meta.xml
<CustomObject>
    <label>Emails to Exclude ChatNow AutoReply</label>
    <pluralLabel>Emails to Exclude ChatNow AutoReplys</pluralLabel>
</CustomObject>