force-app/main/default/objects/Emails_to_Exclude_ChatNow_AutoReply__mdt/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domain</label>
    <type>Checkbox</type>
</CustomField>