force-app/main/default/objects/Emails_to_Exclude_ChatNow_AutoReply__mdt/fields/Send_Auto__c.field-meta.xml
<CustomField>
    <fullName>Send_Auto__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check box used to enable send auto reply chat now email</description>
    <inlineHelpText>Need to be checked to enable auto reply chat now email</inlineHelpText>
    <label>Send Auto Reply</label>
    <type>Checkbox</type>
</CustomField>