force-app/main/default/objects/Emails_to_Exclude_ChatNow_AutoReply__mdt/fields/To_Email__c.field-meta.xml
<CustomField>
    <fullName>To_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email To</label>
    <type>Checkbox</type>
</CustomField>